Uploaded image for project: 'Apache Avro'
  1. Apache Avro
  2. AVRO-480

avro_flush() is in the header, but not implemented

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 1.3.2
    • c
    • None

    Description

      avro_flush() is in the header, but not implemented.

      Instead, should ditch that and move the 3 functions from avro_private.h out into avro.h

      Attachments

        1. avro_flush.diff
          1 kB
          Bruce Mitchener

        Activity

          People

            brucem Bruce Mitchener
            brucem Bruce Mitchener
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: