AVRO-480. avro_flush() is in the header, but not implemented. Contributed by Bruce Mitchener.

git-svn-id: https://svn.apache.org/repos/asf/hadoop/avro/trunk@924552 13f79535-47bb-0310-9956-ffa450edef68